appId: host.exp.Exponent
---
- tapOn:
    text: "Pair another child"

- extendedWaitUntil:
    visible: "Join your family"
    timeout: 30000

- tapOn:
    id: "child-pairing-manual-code"

- inputText: "ALEX26"

- hideKeyboard

- scrollUntilVisible:
    element:
      id: "child-pairing-submit-manual-code"
    direction: DOWN
    timeout: 10000
    visibilityPercentage: 80

- tapOn:
    id: "child-pairing-submit-manual-code"
    retryTapIfNoChange: true

- extendedWaitUntil:
    visible: "Protect Alex"
    timeout: 30000
