appId: host.exp.Exponent
---
- tapOn:
    text: "Open Alex in Krasniqi Family"

- extendedWaitUntil:
    visible:
      id: "child-pin-input"
    timeout: 30000

- tapOn:
    id: "child-pin-input"
- eraseText: 8
- inputText: "1234"

- tapOn:
    id: "child-pin-unlock"

- extendedWaitUntil:
    visible: "Hi, Alex"
    timeout: 30000
